<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/action_label_refresh"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_settings"
        android:showAsAction="ifRoom"
        android:title="@string/action_label_settings"/>
    <item
        android:id="@+id/menu_donate"
        android:showAsAction="never"
        android:title="@string/action_label_donate"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_menu_about"
        android:showAsAction="never"
        android:title="@string/action_label_about"/>

</menu>